GNOME Bugzilla – Bug 728423
Standalone mutter crashes with SIGSEGV when trying to switch workspaces
Last modified: 2014-04-17 15:37:27 UTC
Steps to reproduce: - Run `mutter --replace` in the terminal; - Try to switch workspaces using (Ctrl + Alt + →) sequence. Full backtrace:
+ Trace 233483
Created attachment 274610 [details] [review] keybindings: Handle switch-to-workspace-{up,down,left,right} again Commit 585fdd781cc5 not only removed the tabpopup, but set invalid handlers (a.k.a. NULL) for those shortcuts; add back handling of basic handling of those shortcuts by switching instantly without any popups.
Review of attachment 274610 [details] [review]: Oh, whoops. I thought if the handler was NULL it would just do nothing, not crash.
Attachment 274610 [details] pushed as abd0ac2 - keybindings: Handle switch-to-workspace-{up,down,left,right} again
Yay, you fixed this bug in less than 30 minutes! Thanks! \o/