keybindings: Handle switch-to-workspace-{up,down,left,right} again

Commit 585fdd781cc5 not only removed the tabpopup, but set invalid
handlers (a.k.a. NULL) for those shortcuts; add back handling of
basic handling of those shortcuts by switching instantly without any
popups.

https://bugzilla.gnome.org/show_bug.cgi?id=728423